// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountSettings 2fa should render a success area if user has already activated 2fa 1`] = `
<div
  className="settings-content"
>
  <div
    className="account-settings"
  >
    <div
      className="panel panel-default"
    >
      <SettingsHeader>
        <Connect(Translate)>
          Account
        </Connect(Translate)>
      </SettingsHeader>
      <div
        className="panel-body"
      >
        <div
          className="user-details"
        >
          <div>
            <Connect(Translate)>
              Username
            </Connect(Translate)>
            :  
            <strong />
          </div>
          <div
            className="user-details-role"
          >
            <Connect(Translate)>
              Role
            </Connect(Translate)>
            :  
            <Pill>
              <Connect(Translate) />
            </Pill>
          </div>
        </div>
        <hr />
        <h5>
          <Connect(Translate)>
            Email address
          </Connect(Translate)>
        </h5>
        <form
          onSubmit={[Function]}
        >
          <div
            className="form-group"
          >
            <label
              className="form-group-label"
              htmlFor="collection_name"
            >
              <Connect(Translate)>
                Email
              </Connect(Translate)>
            </label>
            <input
              className="form-control"
              onChange={[Function]}
              type="email"
              value=""
            />
          </div>
          <button
            className="btn btn-success"
            type="submit"
          >
            <Connect(Translate)>
              Update
            </Connect(Translate)>
          </button>
        </form>
        <hr />
        <h5>
          <Connect(Translate)>
            Change password
          </Connect(Translate)>
        </h5>
        <form
          onSubmit={[Function]}
        >
          <div
            className="form-group "
          >
            <label
              className="form-group-label"
              htmlFor="password"
            >
              <Connect(Translate)>
                New password
              </Connect(Translate)>
            </label>
            <input
              className="form-control"
              id="password"
              onChange={[Function]}
              type="password"
              value=""
            />
          </div>
          <div
            className="form-group "
          >
            <label
              className="form-group-label"
              htmlFor="repeatPassword"
            >
              <Connect(Translate)>
                Confirm new password
              </Connect(Translate)>
            </label>
            <input
              className="form-control"
              id="repeatPassword"
              onChange={[Function]}
              type="password"
              value=""
            />
          </div>
          <button
            className="btn btn-success"
            type="submit"
          >
            <Connect(Translate)>
              Update
            </Connect(Translate)>
          </button>
        </form>
        <hr />
        <h5>
          <Connect(Translate)>
            Two-step verification
          </Connect(Translate)>
        </h5>
        <div
          className="alert alert-info"
        >
          <Connect(Icon)
            icon="check"
            size="2x"
          />
          <div
            className="force-ltr"
          >
            <Connect(Translate)>
              Your account is protected by 2fa.
            </Connect(Translate)>
          </div>
        </div>
      </div>
    </div>
    <div
      className="settings-footer"
    >
      <a
        className="btn btn-danger"
        href="/logout"
      >
        <Connect(Icon)
          icon="power-off"
        />
        <span
          className="btn-label"
        >
          <Connect(Translate)>
            Logout
          </Connect(Translate)>
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`AccountSettings 2fa should render a warning and link to protect account if user not using 2fa 1`] = `
<div
  className="settings-content"
>
  <div
    className="account-settings"
  >
    <div
      className="panel panel-default"
    >
      <SettingsHeader>
        <Connect(Translate)>
          Account
        </Connect(Translate)>
      </SettingsHeader>
      <div
        className="panel-body"
      >
        <div
          className="user-details"
        >
          <div>
            <Connect(Translate)>
              Username
            </Connect(Translate)>
            :  
            <strong />
          </div>
          <div
            className="user-details-role"
          >
            <Connect(Translate)>
              Role
            </Connect(Translate)>
            :  
            <Pill>
              <Connect(Translate) />
            </Pill>
          </div>
        </div>
        <hr />
        <h5>
          <Connect(Translate)>
            Email address
          </Connect(Translate)>
        </h5>
        <form
          onSubmit={[Function]}
        >
          <div
            className="form-group"
          >
            <label
              className="form-group-label"
              htmlFor="collection_name"
            >
              <Connect(Translate)>
                Email
              </Connect(Translate)>
            </label>
            <input
              className="form-control"
              onChange={[Function]}
              type="email"
              value=""
            />
          </div>
          <button
            className="btn btn-success"
            type="submit"
          >
            <Connect(Translate)>
              Update
            </Connect(Translate)>
          </button>
        </form>
        <hr />
        <h5>
          <Connect(Translate)>
            Change password
          </Connect(Translate)>
        </h5>
        <form
          onSubmit={[Function]}
        >
          <div
            className="form-group "
          >
            <label
              className="form-group-label"
              htmlFor="password"
            >
              <Connect(Translate)>
                New password
              </Connect(Translate)>
            </label>
            <input
              className="form-control"
              id="password"
              onChange={[Function]}
              type="password"
              value=""
            />
          </div>
          <div
            className="form-group "
          >
            <label
              className="form-group-label"
              htmlFor="repeatPassword"
            >
              <Connect(Translate)>
                Confirm new password
              </Connect(Translate)>
            </label>
            <input
              className="form-control"
              id="repeatPassword"
              onChange={[Function]}
              type="password"
              value=""
            />
          </div>
          <button
            className="btn btn-success"
            type="submit"
          >
            <Connect(Translate)>
              Update
            </Connect(Translate)>
          </button>
        </form>
        <hr />
        <h5>
          <Connect(Translate)>
            Two-step verification
          </Connect(Translate)>
        </h5>
        <div>
          <div
            className="alert alert-warning"
          >
            <Connect(Icon)
              icon="exclamation-triangle"
              size="2x"
            />
            <div
              className="force-ltr"
            >
              <Connect(Translate)>
                You should activate this feature for enhanced account security
              </Connect(Translate)>
            </div>
          </div>
          <div>
            <Connect(I18NLink)
              className="btn btn-success"
              to="/settings/2fa"
            >
              <Connect(Translate)>
                Protect your account
              </Connect(Translate)>
            </Connect(I18NLink)>
          </div>
        </div>
      </div>
    </div>
    <div
      className="settings-footer"
    >
      <a
        className="btn btn-danger"
        href="/logout"
      >
        <Connect(Icon)
          icon="power-off"
        />
        <span
          className="btn-label"
        >
          <Connect(Translate)>
            Logout
          </Connect(Translate)>
        </span>
      </a>
    </div>
  </div>
</div>
`;
